--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Etch a Sketch</h1>
+    <button onclick="updateGrid()">Grid size</button>
     <button onclick="clearGrid()">Clear</button>
     <div class="container"></div>
 </body>
