Add 'button-container' with style

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
     <h1>Etch a Sketch</h1>
-    <button onclick="updateGrid()">Grid size</button>
-    <button onclick="clearGrid()">Clear</button>
+    <div class="buttons-container">
+        <button onclick="updateGrid()">Grid size</button>
+        <button onclick="clearGrid()">Clear</button>
+    </div>
     <div class="container"></div>
 </body>
 </html>
