Fix typo and remove onclick attribute

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <h1>Etch a Sketch</h1>
     <div class="buttons-container">
-        <button onclick="updateGrid()">Grid size</button>
-        <button onclick="clearGrid()">Clear</button>
+            <button class="update-grid">Grid size</button>
+            <button class="clear-grid">Clear</button>
     </div>
     <div class="container"></div>
 </body>
