Add a new main container

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch a Sketch</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="index.js" defer></script>
+    <script type="module" src="index.js" defer></script>
 </head>
 <body>
-    <h1>Etch a Sketch</h1>
-    <div class="buttons-container">
+    <div class="container">
+        <h1>Etch a Sketch</h1>
+        <div class="buttons-container">
             <button class="update-grid">Grid size</button>
             <button class="clear-grid">Clear</button>
+        </div>
+        <p class="message-error"></p>
+        <div class="etch-a-sketch-container"></div>
     </div>
-    <div class="container"></div>
 </body>
 </html>
